auto-test/tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_local_var.c
struct s;

int main(void) {
  
  struct s v;
  return 0;
}